hphp/hack/test/typecheck/new_inference/eager_solve/lambda_array_get.php.like_types.exp
File "lambda_array_get.php", line 12, characters 13-14:
Invalid argument (Typing[4110])
File "lambda_array_get.php", line 11, characters 49-50:
Expected T1
File "lambda_array_get.php", line 11, characters 32-33:
But got dynamic because it is an unenforceable type
File "lambda_array_get.php", line 147, characters 39-44:
Invalid argument (Typing[4110])
File "lambda_array_get.php", line 16, characters 20-20:
Expected ~Contra<ConstVector<string>> because it is an unenforceable type
File "lambda_array_get.php", line 11, characters 65-74:
But got Contra<<expr#1>>
